--- a/index.html
+++ b/index.html
@@ -6,10 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e237ed7f72.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="banner">
+        <div class="banner-text half">
+            <h1 id="banner-title">The Greatest show on the earth</h1>
+            <p id="banner-para">Contrary to popular belief, Lorem Ipsum is not simply
+                random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
+                old.
+            </p>
+            <button class="banner-button">Watch live<i class="fa-solid fa-angle-right"></i></button>
+        </div>
+        <div class="banner-image half">
+            <img id="banner-pic" src="./assets/Banner Image.png" alt="">
+        </div>
+    </section>
 
 </body>
+<!-- <footer>
+    <h1>blogs</h1>
+</footer> -->
 
 </html>
