--- a/index.html
+++ b/index.html
@@ -27,10 +27,158 @@
             <img id="banner-pic" src="./assets/Banner Image.png" alt="">
         </div>
     </section>
+    <section class="blogs">
+        <div class="blog-buttons">
+            <button class="blog-button">Upcoming Match</button>
+            <button class="blog-button">All Group </button>
+            <button class="blog-button active">Blog</button>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div>
+                    <img class="card-image" src="./assets/Blog Image.png" alt="">
+                </div>
+                <div class="card-info">
+                    <button class="card-button">Transfer</button>
+                    <p class="card-para">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="card-icon">
+                        <i class="fa-regular fa-clock">10h</i>
+                        <i class="fa-regular fa-comment-dots">23</i>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <img class="card-image" src="./assets/Blog Image.png" alt="">
+                </div>
+                <div class="card-info">
+                    <button class="card-button">Transfer</button>
+                    <p class="card-para">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="card-icon">
+                        <i class="fa-regular fa-clock">10h</i>
+                        <i class="fa-regular fa-comment-dots">23</i>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <img class="card-image" src="./assets/Blog Image.png" alt="">
+                </div>
+                <div class="card-info">
+                    <button class="card-button">Transfer</button>
+                    <p class="card-para">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="card-icon">
+                        <i class="fa-regular fa-clock">10h</i>
+                        <i class="fa-regular fa-comment-dots">23</i>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <img class="card-image" src="./assets/Blog Image.png" alt="">
+                </div>
+                <div class="card-info">
+                    <button class="card-button">Transfer</button>
+                    <p class="card-para">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="card-icon">
+                        <i class="fa-regular fa-clock">10h</i>
+                        <i class="fa-regular fa-comment-dots">23</i>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <img class="card-image" src="./assets/Blog Image.png" alt="">
+                </div>
+                <div class="card-info">
+                    <button class="card-button">Transfer</button>
+                    <p class="card-para">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="card-icon">
+                        <i class="fa-regular fa-clock">10h</i>
+                        <i class="fa-regular fa-comment-dots">23</i>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <img class="card-image" src="./assets/Blog Image.png" alt="">
+                </div>
+                <div class="card-info">
+                    <button class="card-button">Transfer</button>
+                    <p class="card-para">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="card-icon">
+                        <i class="fa-regular fa-clock">10h</i>
+                        <i class="fa-regular fa-comment-dots">23</i>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <img class="card-image" src="./assets/Blog Image.png" alt="">
+                </div>
+                <div class="card-info">
+                    <button class="card-button">Transfer</button>
+                    <p class="card-para">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="card-icon">
+                        <i class="fa-regular fa-clock">10h</i>
+                        <i class="fa-regular fa-comment-dots">23</i>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <img class="card-image" src="./assets/Blog Image.png" alt="">
+                </div>
+                <div class="card-info">
+                    <button class="card-button">Transfer</button>
+                    <p class="card-para">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="card-icon">
+                        <i class="fa-regular fa-clock">10h</i>
+                        <i class="fa-regular fa-comment-dots">23</i>
+
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <img class="card-image" src="./assets/Blog Image.png" alt="">
+                </div>
+                <div class="card-info">
+                    <button class="card-button">Transfer</button>
+                    <p class="card-para">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    <div class="card-icon">
+                        <i class="fa-regular fa-clock">10h</i>
+                        <i class="fa-regular fa-comment-dots">23</i>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <footer>
+        <h1>Goal</h1>
+        <hr>
+        <div class="foot-text">
+            <p>contact us</p>
+            <p>terms of service</p>
+            <p>privacy policy</p>
+            <p>privacy settings</p>
+            <p>goal app</p>
+            <p>goal live</p>
+
+        </div>
+        <div class="foot-icon">
+        </div>
+    </footer>
 
 </body>
-<!-- <footer>
-    <h1>blogs</h1>
-</footer> -->
 
 </html>
