--- a/index.html
+++ b/index.html
@@ -175,7 +175,11 @@
             <p>goal live</p>
 
         </div>
-        <div class="foot-icon">
+        <div class="foot-icons">
+            <div class="foot-icon"><i class="fa-brands fa-facebook-square"></i></div>
+            <div class="foot-icon"><i class="fa-brands fa-instagram-square"></i></div>
+            <div class="foot-icon"><i class="fa-brands fa-youtube"></i></div>
+            <!-- <div class="foot-icon"><i class="fa-regular fa-globe"></i></div> -->
         </div>
     </footer>
 
