--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
     <section class="blogs">
         <div class="blog-buttons">
-            <button class="blog-button">Upcoming Match</button>
+            <button class="blog-button"><a href="match.html">Upcoming Match</a></button>
             <button class="blog-button">All Group </button>
             <button class="blog-button active">Blog</button>
         </div>
