--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             </div>
 
         </div>
+        <button id="show-more">show more</button>
     </section>
     <footer>
         <h1>Goal</h1>
