--- a/match.html
+++ b/match.html
@@ -121,11 +121,12 @@
 
         </div>
         <div class="foot-icons">
-            <div class="foot-icon"><i class="fa-brands fa-facebook-square"></i></div>
-            <div class="foot-icon"><i class="fa-brands fa-instagram-square"></i></div>
-            <div class="foot-icon"><i class="fa-brands fa-youtube"></i></div>
-            <!-- <div class="foot-icon"><i class="fa-regular fa-globe"></i></div> -->
-        </div>
+            <div class="foot-icon"><a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-facebook-square"></i></a></div>
+            <div class="foot-icon"><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-instagram-square"></i></a></div>
+            <div class="foot-icon"><a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-youtube"></i></a></div>
     </footer>
 
 </body>
